--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ nav{
     width: 1240px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 20px;
+
 }
 
 .products{
@@ -53,6 +55,7 @@ nav{
     width: 100%;
     position: relative;
 
+
 }
 
 .product{
@@ -60,12 +63,15 @@ nav{
     border-radius: 5px;
     box-shadow: 1px .5px 2px .5px;
     padding-bottom: 10px;
+    padding: 15px;
+    background-color: #FA8C1A;
+    display: flex;
+    flex-direction: column;
 }
 
 .product img{
     width: 100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
 }
 
 .product p{
@@ -90,8 +96,8 @@ nav{
     box-shadow: 1px 1px 2px 1px #a09e9e;
     border-radius: 5px;
     padding: 15px;
-    max-width: 500px;
-    height: fit-content;
+    max-width: 600px;
+    
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -106,6 +112,9 @@ nav{
 
 .details{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .inactive{
@@ -114,10 +123,27 @@ nav{
 
 
 #btn{
-    background-color: yellowgreen;
+    
     border-radius: 5px;
     border: 2 ;
-    border-color: red;
+    
+    width: 40%;
+
+    font-size: 14px;
+}
+
+.btn:hover{
+    cursor: pointer
+}
+
+.btn{
+    
+    border-radius: 5px;
+    border: 2 ;
+    border-color: grey;
+    font-size: 14px;
+    width: 40%;
+    margin-top: 10px;
 }
 
 
