--- a/styles.css
+++ b/styles.css
@@ -1,150 +1,198 @@
-*{
-    box-sizing: border-box;
-    font-family: cursive;
+* {
+  box-sizing: border-box;
+  font-family: cursive;
 }
 
-body{
-    padding: 0;
-    margin: 0;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-nav{
-    background-color: grey;
-    width: 100%;
+nav {
+  background-color: grey;
+  width: 100%;
 }
 
-.nav-bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 1240px;
-    width: 100%;
+.nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 1240px;
+  width: 100%;
 }
 
-.nav-bar img{
-    width: 50px;
-    border-radius: 50px;
+.nav-bar img {
+  width: 50px;
+  border-radius: 50px;
 }
-.nav-links{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 25%;
-    font-weight: 550;
-    
-}
-
-.nav-links a{
-    color: aqua;
-    text-decoration: none;
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 25%;
+  font-weight: 550;
 }
 
-
-.container{
-    width: 1240px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
-
+.nav-links a {
+  color: aqua;
+  text-decoration: none;
 }
 
-.products{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    width: 100%;
-    position: relative;
-
-
+.filter{
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.product{
-    width: 100%;
-    border-radius: 5px;
-    box-shadow: 1px .5px 2px .5px;
-    padding-bottom: 10px;
-    padding: 15px;
-    background-color: #FA8C1A;
-    display: flex;
-    flex-direction: column;
+.filter button{
+  background-color: rgb(235, 227, 227);
+  border: 0;
+  font-size: 16px;
+  margin-top: 10px;
+  padding: 8px;
+  border-radius: 40px;
+  width: 15%;
 }
 
-.product img{
-    width: 100%;
-    border-radius: 5px;
+.filter button:hover{
+  cursor: pointer;
 }
 
-.product p{
-    text-transform: capitalize;
-    margin-left: 10px;
+.container {
+  width: 1240px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
-.product h5, .product span{
-    margin-left: 10px;
+.products {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  width: 100%;
+  position: relative;
 }
 
-.product-detail{
-    height: 100vh;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+.product {
+  width: 100%;
+  height: 300px;/*
+  border-radius: 5px;
+  box-shadow: 1px 0.5px 2px 0.5px;
+  padding-bottom: 10px;
+  padding: 15px;
+  /*background-color: #fa8c1a;*/
+  display: flex;
+  flex-direction: column;
 }
 
-#popup{
-    background-color: #edebeb;
-    box-shadow: 1px 1px 2px 1px #a09e9e;
-    border-radius: 5px;
-    padding: 15px;
-    max-width: 600px;
-    
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    gap: 15px;
-    margin: 100px auto;
+span{
+  color: RED;
+  font-weight: 600;
+  font-size: 18PX;
 }
 
-.product-detail img{
-    width: 50%;
-    border-radius: 5px;
+.product img {
+  width: 50%;
+  height: 50%;
+  border-radius: 5px;
 }
 
-.details{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-
+.product p {
+  text-transform: capitalize;
+  margin-left: 10px;
 }
 
-.inactive{
-    visibility: hidden;
+.product h5,
+.product span {
+  margin-left: 10px;
+}
+
+.product-detail {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#popup {
+  background-color: #edebeb;
+  box-shadow: 1px 1px 2px 1px #a09e9e;
+  border-radius: 5px;
+  padding: 15px;
+  max-width: 600px;
+
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+  margin: 100px auto;
+}
+
+.product-detail img {
+  width: 50%;
+  border-radius: 5px;
+}
+
+.details {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.inactive {
+  visibility: hidden;
+}
+
+#btn {
+  border-radius: 5px;
+  border: 2;
+  width: 40%;
+  font-size: 14px;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn {
+  border-radius: 50PX;
+  padding: 8PX 0;
+  border-color: grey;
+  font-size: 14px;
+  width: 50%;
+  margin-top: 10px;
+  
 }
 
 
-#btn{
-    
-    border-radius: 5px;
-    border: 2 ;
-    
-    width: 40%;
 
-    font-size: 14px;
-}
 
-.btn:hover{
-    cursor: pointer
-}
 
-.btn{
-    
-    border-radius: 5px;
-    border: 2 ;
-    border-color: grey;
-    font-size: 14px;
-    width: 40%;
-    margin-top: 10px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
