--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 nav {
-  background-color: grey;
+  background-color: skyblue;
   width: 100%;
 }
 
@@ -34,47 +34,116 @@ nav {
 }
 
 .nav-links a {
-  color: aqua;
+  color: white;
+  font-size: 20px;
   text-decoration: none;
 }
 
-.filter{
-  width: 40%;
+.advert{
+  height: 320px;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 0 20px 0;
+
 }
 
-.filter button{
-  background-color: rgb(235, 227, 227);
-  border: 0;
-  font-size: 16px;
-  margin-top: 10px;
-  padding: 8px;
-  border-radius: 40px;
-  width: 15%;
+.advert img{
+  width: 80%;
+  height: 100%;
+  border-radius: 5px;
 }
 
-.filter button:hover{
+.offer{
+  position: relative;
+  color: black;
+  left: -300px;
+  top: 100px;
+  width: fit-content;
+  line-height: 50px;
+  height: 10px;
+}
+
+.offer button:hover{
   cursor: pointer;
 }
 
-.container {
-  width: 1240px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 20px;
+.offer button{
+  background-color: purple;
+  color: white;
+  border-radius: 30px;
+  border: none;
+  padding: 5px 0;
+  width: 120px;
+  font-size: 18px;
 }
+
+
+
+.inputs{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-start;
+  margin: 20px 0;
+}
+
+
+
+.inputs button:hover{
+  cursor: pointer;
+}
+
+input{
+  border-radius: 20px;
+  padding: 5px 10px;
+  font-size: 14px;
+  margin-right: 130px;
+ width: 400px;
+}
+
+.filter{
+  width: 100%;
+  display: flex;
+  gap: 40px;
+  margin-left: 130px;
+  justify-content: flex-start;
+}
+
+
+
+.container {
+  width: 1050px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+
+}
+
+
+
+
 
 .products {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  width: 100%;
   position: relative;
 }
 
+.product:hover{
+  box-shadow: 5px 5px 5px 5px lightgrey;
+  cursor: pointer;
+  opacity: .7;
+  border-radius: 5px;
+}
+
 .product {
-  width: 100%;
+  width: 250px;
   height: 300px;/*
   border-radius: 5px;
   box-shadow: 1px 0.5px 2px 0.5px;
@@ -83,6 +152,9 @@ nav {
   /*background-color: #fa8c1a;*/
   display: flex;
   flex-direction: column;
+  align-items: center ;
+  text-align: center;
+  opacity: 1;
 }
 
 span{
@@ -92,7 +164,7 @@ span{
 }
 
 .product img {
-  width: 50%;
+  width: 70%;
   height: 50%;
   border-radius: 5px;
 }
@@ -166,7 +238,15 @@ span{
 }
 
 
+select{
 
+  border-radius: 30px;
+  width: fit-content;
+  font-size: 16px;
+  padding: 5px 0px;
+  background-color: #EBE3E3;
+
+}
 
 
 
